--- a/sudoku/templates/index.html
+++ b/sudoku/templates/index.html
@@ -7,8 +7,7 @@
 </head>
 
 <body>
-<header class="navbar">
-  <form action="/upload" method="post" enctype="multipart/form-data" >
+ <form action="/upload" method="post" enctype="multipart/form-data" >
       <span class="btn btn-default btn-file">
         Browse <input type="file" name="image">
       </span>
@@ -16,7 +15,8 @@
     <input type="submit" value="Upload your image" class="btn btn-primary">
   </form>
 
-</header>
-
+  <form action="/example" method="get" enctype="multipart/form-data">
+      <input type="submit" value="See Example" class="btn btn-primary">
+  </form>
 </body>
 </html>
