--- a/sudoku/templates/error.html
+++ b/sudoku/templates/error.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-
+  <p>
+      Sorry! Something went wrong, namely {{error}}. Try a different image.
+  <p/>
   <form action="/upload" method="post" enctype="multipart/form-data" >
       <span class="btn btn-default btn-file">
         Browse <input type="file" name="image">
